Add flat site files.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,108 @@
-:|
+<!doctype html>
+<html class="no-js" lang="">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Doug Morin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="tmp/fontawesome.css">
+  <link rel="stylesheet" href="tmp/style.css">
+  <script src="tmp/modernizr-2.8.3.min.js"></script>
+</head>
+<body>
+
+  <section id="static-header">
+    <div class="image-center-buffer">
+      <img src="img/header/libby-hill-snow.jpg" alt="" />
+    </div>
+  </section>
+
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col3">
+          <div class="logo">
+            <p><a href="/" alt="dougmor.in"><span>dougmor</span>.in</a></p>
+          </div>
+        </div>
+        <div class="col9">
+          <nav role="main">
+            <ul>
+              <!-- <li><a href="/">yeah</a></li> -->
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <div class="header-buffer"></div>
+
+  <section id="about-profile" class="clearfix">
+    <div class="container">
+      <div class="profile-image">
+        <img src="img/dugdug.png" alt="Doug Morin headshot" />
+      </div>
+      <div class="profile-content">
+        <h1>Hello, I'm <strong>Doug Morin</strong>.</h1>
+        <h2><span class="job-title">Web Developer Extraordinaire</span><br/><span class="job-title">Cybernetic Entomologist</span></h2>
+        <p class="has-label"><span>Age:</span> 35</p>
+        <p class="has-label"><span>Location:</span> Poland, Maine</p>
+        <p class="has-label"><span>Current:</span> Director of Web Development at <a href="https://rinckadvertising.com" target="_blank" rel="nofollow">Rinck Advertising</a></p>
+      </div>
+    </div>
+    <div class="container">
+      <div class="profile-connections">
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/dougmorin/" target="_blank" target="rel" title="Connect on LinkedIn">
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+              <span>LinkedIn</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://twitter.com/dougmorin0" target="_blank" target="rel" title="Connect on Twitter">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+              <span>Twitter</span></a>
+          </li>
+          <li>
+            <a href="https://gitlab.com/dougmorin0" target="_blank" target="rel" title="Connect on GitLab">
+              <i class="fa fa-gitlab" aria-hidden="true"></i>
+              <span>GitLab</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/dougmorin" target="_blank" target="rel" title="Connect on GitHub">
+              <i class="fa fa-github" aria-hidden="true"></i>
+              <span>GitHub</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://t.me/dougmorin0" target="_blank" target="rel" title="Connect on Telegram">
+              <i class="fa fa-telegram" aria-hidden="true"></i>
+              <span>Telegram</span>
+            </a>
+          </li>
+          <li>
+            <a href="https://keybase.io/dugdug0" target="_blank" target="rel" title="Connect on Keybase">
+              <i class="fa fa-key" aria-hidden="true"></i>
+              <span>Keybase</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <div class="footer-buffer"></div>
+
+  <footer>
+    <p>&copy; Copyright 2019 dougmor.in, All Rights Reserved.</p>
+  </footer>
+
+  <!-- javascript includes !-->
+  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script>window.jQuery || document.write('<script src="tmp/jquery-1.12.0.min.js"><\/script>')</script>
+  <script src="tmp/script.js"></script>
+</body>
+</html>
