--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p class="has-label"><span>Age:</span> 35</p>
         <p class="has-label"><span>Location:</span> Poland, Maine</p>
         <p class="has-label"><span>Current:</span> Director of Web Development at <a href="https://rinckadvertising.com" target="_blank" rel="nofollow">Rinck Advertising</a></p>
-        <p class="has-label"><span>Resume:</span> <a href="/uploads/doug.morin.full.resume.pdf" target="_blank" rel="nofollow">doug.morin.full.resume.pdf</a></p>
+        <p class="has-label"><span>Resume:</span> <a href="/uploads/doug.morin.full.resume.pdf" target="_blank" rel="nofollow"><i class="fas fa-file-pdf"></i> doug.morin.full.resume.pdf</a></p>
       </div>
     </div>
     <div class="container">
