--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="profile-content">
         <h1>Hello, I'm <strong>Doug Morin</strong>.</h1>
         <h2><span class="job-title">Web Developer Extraordinaire</span><br/><span class="job-title">Cybernetic Entomologist</span></h2>
-        <p class="has-label"><span>Age:</span> 35</p>
+        <p class="has-label"><span>Age:</span> 37</p>
         <p class="has-label"><span>Location:</span> Poland, Maine</p>
-        <p class="has-label"><span>Current:</span> Director of Web Development at <a href="https://rinckadvertising.com" target="_blank" rel="nofollow">Rinck Advertising</a></p>
-        <p class="has-label"><span>Resume:</span> <a href="/uploads/doug.morin.full.resume.pdf" target="_blank" rel="nofollow"><i class="fa fa-file"></i> doug.morin.full.resume.pdf</a></p>
+        <p class="has-label"><span>Current:</span> Software Engineer at <a href="https://derickdermatology.com" target="_blank" rel="nofollow">Derick Dermatology</a></p>
+        <!--<p class="has-label"><span>Resume:</span> <a href="/uploads/doug.morin.full.resume.pdf" target="_blank" rel="nofollow"><i class="fa fa-file"></i> doug.morin.full.resume.pdf</a></p>!-->
       </div>
     </div>
     <div class="container">
@@ -98,7 +98,7 @@
   <div class="footer-buffer"></div>
 
   <footer>
-    <p>&copy; Copyright 2020 dougmor.in, All Rights Reserved.</p>
+    <p>&copy; Copyright 2022 dougmor.in, All Rights Reserved.</p>
   </footer>
 
   <!-- javascript includes !-->
