--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -9,7 +9,7 @@
   <script src="tmp/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <div style="width:100%;max-width:800px;color:white;padding:20px;margin:0 auto;">
+  <div style="width:100%;max-width:800px;background-color:white;padding:20px;margin:0 auto;">
     <h1>Privacy Policy</h1>
     <p>This Privacy Policy outlines how dougmor.in collects, uses, and protects personal information obtained through automated communications, in accordance with the Acceptable Use Policy (AUP) set forth by Mailgun.</p>
     <h2>Information Collection:</h2>
